CSS 3D transform by matrix3d with translations doesn't take page zoom into account https://bugs.webkit.org/show_bug.cgi?id=164580

Reviewed by Antoine Quint.

matrix3d() had a problem if matrix3d() includes translations and page
zoom was applied. The translation component should be treated in the
initial page zoom.
scale3d(zoom, zoom, zoom) × matrix × scale3d(1 / zoom, 1 / zoom, 1 / zoom)

Cherry-picked Blink's change.
<https://codereview.chromium.org/2482753002>

* LayoutTests/fast/css/getComputedStyle/computed-style-with-zoom-expected.txt:
* LayoutTests/fast/css/getComputedStyle/computed-style-with-zoom.html:
* LayoutTests/transforms/3d/general/cssmatrix-3d-zoom-expected.html: Added.
* LayoutTests/transforms/3d/general/cssmatrix-3d-zoom-expected.png: Removed.
* LayoutTests/transforms/3d/general/cssmatrix-3d-zoom-expected.txt: Removed.
* LayoutTests/transforms/3d/general/cssmatrix-3d-zoom.html: Converted
to a ref-test.
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::matrixTransformValue):
(WebCore::zoomAdjustedNumberValue): Deleted.
* Source/WebCore/css/TransformFunctions.cpp:
(WebCore::transformsForValue):
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::TransformationMatrix::zoom):
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.h:

Canonical link: https://commits.webkit.org/255416@main